My Third Commit

--- a/rafi.html
+++ b/rafi.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my first website</title>
+    <link rel="stylesheet" href="css/rafi.css">
 </head>
 <body>
-    <h3>Rafi Islam</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quibusdam asperiores voluptatem obcaecati, neque laudantium nesciunt labore impedit deleniti molestias optio, perferendis cumque velit soluta sint officia exercitationem, assumenda illo?</p>
+<header>
+<nav>
+   <ul>
+    <li><a href="https://help.abstract.com/hc/en-us">Abstract</a></li>
+    <li><a href="https://help.abstract.com/hc/en-us">Help Center</a></li>
+    <li><a href="submit.request"><button> Submit a request</button></a></li>
+    <li><a href="sign.in"><button>Sign in</button></a></li>
+
+   </ul> 
+</nav>
+</header>
+<main>
+
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
