--- a/rafi.html
+++ b/rafi.html
@@ -10,6 +10,7 @@
 <header>
 <nav>
    <ul>
+
     <li><a href="https://help.abstract.com/hc/en-us">Abstract</a></li>
     <li><a href="https://help.abstract.com/hc/en-us">Help Center</a></li>
     <li><a href="submit.request"><button> Submit a request</button></a></li>
@@ -19,10 +20,15 @@
 </nav>
 </header>
 <main>
+    <article>
+        <header><h1>
+            How can we help?
+        </h1></header>
+    </article>
 
 </main>
 <footer>
-
+<p><small> &copy;2050. All rights reserved</small></p>
 </footer>
 </body>
 </html>
